[package]
name = "munin-dam-wsratio"
version = "0.1.0"
authors = ["Masahiro Yoshitake <sam-tk@x-day.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-munin-plugin = "^0"
ureq = { version = "^2", features = ["json"] }
serde_json = "^0"
jmespath = "0.3.0"
strip_bom = "1.0.0"
